Use action on IChemModelRelay to change formal charge fixes bug #545
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9210 fcb5ba71-d80d-0410-8237-ba3920747fcc